admin side ver3-fixed alignment

--- a/client/src/app/components/admin-chairpersons/admin-chairpersons.css
+++ b/client/src/app/components/admin-chairpersons/admin-chairpersons.css
@@ -73,6 +73,19 @@
     color: #800000;
 }
 
+.table-row .row-item:nth-child(2) {
+    text-align: center;
+}
+
+.table-row .row-item:nth-child(4) {
+    text-align: center;
+}
+
+.table-header .header-item:nth-child(2),
+.table-header .header-item:nth-child(4) {
+    text-align: center;
+}
+
 .header-item.sortable {
     cursor: pointer;
     user-select: none;
